src/test/ui/issues/issue-46472.stderr
error[E0597]: borrowed value does not live long enough (Ast)
  --> $DIR/issue-46472.rs:14:10
   |
LL |     &mut 4
   |          ^ temporary value does not live long enough
...
LL | }
   | - temporary value only lives until here
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 13:8...
  --> $DIR/issue-46472.rs:13:8
   |
LL | fn bar<'a>() -> &'a mut u32 {
   |        ^^

error[E0597]: borrowed value does not live long enough (Mir)
  --> $DIR/issue-46472.rs:14:10
   |
LL |     &mut 4
   |          ^ temporary value does not live long enough
...
LL | }
   | - temporary value only lives until here
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 13:8...
  --> $DIR/issue-46472.rs:13:8
   |
LL | fn bar<'a>() -> &'a mut u32 {
   |        ^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0597`.
